--- a/less/items.less
+++ b/less/items.less
@@ -37,11 +37,6 @@
   .primary-body {
     .tab {
       padding: 0 5px;
-
-      &.active {
-        display: flex;
-        flex-flow: column;
-      }
     }
 
     .item-properties {
